Multiples minor fixes (display) in the Marketplace
- Prices in AVAX is now rounded up if needed: no more padding and/or text overlaps if the price is set with a lot of digits. Buyer will always pay the displayed price or a little less.

- Added a Note that explain the previous point to the buyer: for clarity

- Prices in AVAX now follow the same rule than other number (comma separator): better consistency

- Center and bold ID: better readability

- Align price with images: better readability

--- a/src/components/NFT/NFT.css
+++ b/src/components/NFT/NFT.css
@@ -39,4 +39,12 @@
     display: flex;
   justify-content: center;
   }
-  
+
+.center-text-NFT {
+    text-align:center;
+}
+
+.align-text-NFT {
+    padding-left: 15px;
+    padding-bottom: 15px;
+}
